[package]
name = "kitchen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4.0"
confy = "0.6.0"
serde_derive = "1.0.196"
serde = "1.0.196"
serde_traitobject = "0.2.8"
