[package]
name = "kitchen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4.0"
confy = "0.6.0"
serde_derive = "1.0.196"
serde = "1.0.196"
serde_traitobject = "0.2.8"
ping = "0.5.1"
rayon = "1.8.1"
aws-config = "1.1.4"
aws-sdk-ec2 = "1.17.0"
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["full"] }
